--- a/index.html.html
+++ b/index.html.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grid, devchallenge.io - Task 1</title>
+    <title>Collab - Shridhar Govindaiah</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
