Logo update & footer layout changed

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       </main>
 
       <footer class="task-1-footer">
-        <a href=""><img class="task-1-photos" src="./images/instagram.jpg" /> </a>
-        <a href=""><img class="task-1-photos" src="./images/twitter.jpg" /></a>
-        <a href=""><img class="task-1-photos" src="./images/youtube.jpg" /></a>
         <h5 class="author">Shridhar Govindaiah</h5>
+        <a href=""><img class="task-1-photos" src="./images/instagram.jpg" width="50"/> </a>
+        <a href=""><img class="task-1-photos" src="./images/twitter.jpg" width="50" /></a>
+        <a href=""><img class="task-1-photos" src="./images/youtube.jpg" width="50" /></a>
       </footer>
     </div>
   </body>
